--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ScreenRecording</string>
+    <string name="start_record">Start recording</string>
+    <string name="stop_record">Stop recording</string>
 </resources>
